--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "form-data": "^2.3.2",
+    "mongodb": "^3.1.4",
     "mongoose": "^5.2.13"
   }
 }
